perf: 요구사항 버전 이력 조회 프로젝션 분리 (BE-03)